# Catalyst-Browser

./: README.md
Catalyst Browser/: pom.xml  profiles.json
Catalyst Browser 0.1/: pom.xml  profiles.json
Catalyst Browser 0.1/src/main/cpp/: cef_client.cpp  cef_wrapper.cpp  cef_wrapper.h
Catalyst Browser 0.1/src/main/java/: module-info.java
Catalyst Browser 0.1/src/main/java/com/zetax/zetabrowser/: BrowserUIUtils.java  BrowserView.java  HelloApplication.java  HelloController.java  NativeBridge.java  Profile.java  ProfileManager.java  ProfileViewController.java  TabGroup.java  TabInfo.java  TabManager.java
Catalyst Browser 0.1/src/main/native/summarizer/: Makefile  summarizer.c
Catalyst Browser 0.1/src/main/resources/com/zetax/zetabrowser/: hello-view.fxml  light-style.css  profile-view.fxml
Catalyst Browser/src/main/cpp/: CMakeLists.txt  cef_client.h  jni_bridge.cpp
Catalyst Browser/src/main/java/com/zetax/zetabrowser/: BrowserUIUtils.java  HelloApplication.java  HelloController.java  ProfileManager.java  TabInfo.java
